Grammar/Language/DotParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from S:/Workspace/Analysis/Mobilize/Grammar/Syntax\DotParser.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Mobilize.Grammar.Language {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class DotParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		STRICT=1, GRAPH=2, DIGRAPH=3, NODE=4, EDGE=5, SUBGRAPH=6, LPAREN=7, RPAREN=8, 
		LBRACE=9, RBRACE=10, LBRACK=11, RBRACK=12, SEMI=13, COMMA=14, DOT=15, 
		COLON=16, ASSIGN=17, ARROW=18, OPTION=19, NUMBER=20, STRING=21, ID=22, 
		HTML_STRING=23, COMMENT=24, LINE_COMMENT=25, PREPROC=26, WS=27;
	public const int
		RULE_graph = 0, RULE_statement_list = 1, RULE_statement = 2, RULE_attribute_statement = 3, 
		RULE_attribute_list = 4, RULE_a_list = 5, RULE_edge_statement = 6, RULE_edgeRHS = 7, 
		RULE_edge_operation = 8, RULE_node_statement = 9, RULE_node_id = 10, RULE_port = 11, 
		RULE_subgraph = 12, RULE_id = 13;
	public static readonly string[] ruleNames = {
		"graph", "statement_list", "statement", "attribute_statement", "attribute_list", 
		"a_list", "edge_statement", "edgeRHS", "edge_operation", "node_statement", 
		"node_id", "port", "subgraph", "id"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, "'('", "')'", "'{'", "'}'", 
		"'['", "']'", "';'", "','", "'.'", "':'", "'='", "'->'", "'--'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "STRICT", "GRAPH", "DIGRAPH", "NODE", "EDGE", "SUBGRAPH", "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", 
		"COLON", "ASSIGN", "ARROW", "OPTION", "NUMBER", "STRING", "ID", "HTML_STRING", 
		"COMMENT", "LINE_COMMENT", "PREPROC", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DotParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DotParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DotParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DotParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class GraphContext : ParserRuleContext {
		public ITerminalNode LBRACE() { return GetToken(DotParser.LBRACE, 0); }
		public Statement_listContext statement_list() {
			return GetRuleContext<Statement_listContext>(0);
		}
		public ITerminalNode RBRACE() { return GetToken(DotParser.RBRACE, 0); }
		public ITerminalNode GRAPH() { return GetToken(DotParser.GRAPH, 0); }
		public ITerminalNode DIGRAPH() { return GetToken(DotParser.DIGRAPH, 0); }
		public ITerminalNode STRICT() { return GetToken(DotParser.STRICT, 0); }
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public GraphContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_graph; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterGraph(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitGraph(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGraph(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GraphContext graph() {
		GraphContext _localctx = new GraphContext(Context, State);
		EnterRule(_localctx, 0, RULE_graph);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 29;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==STRICT) {
				{
				State = 28; Match(STRICT);
				}
			}

			State = 31;
			_la = TokenStream.LA(1);
			if ( !(_la==GRAPH || _la==DIGRAPH) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << STRING) | (1L << ID) | (1L << HTML_STRING))) != 0)) {
				{
				State = 32; id();
				}
			}

			State = 35; Match(LBRACE);
			State = 36; statement_list();
			State = 37; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_listContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode[] SEMI() { return GetTokens(DotParser.SEMI); }
		public ITerminalNode SEMI(int i) {
			return GetToken(DotParser.SEMI, i);
		}
		public Statement_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterStatement_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitStatement_list(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_listContext statement_list() {
		Statement_listContext _localctx = new Statement_listContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GRAPH) | (1L << NODE) | (1L << EDGE) | (1L << SUBGRAPH) | (1L << LBRACE) | (1L << NUMBER) | (1L << STRING) | (1L << ID) | (1L << HTML_STRING))) != 0)) {
				{
				{
				State = 39; statement();
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==SEMI) {
					{
					State = 40; Match(SEMI);
					}
				}

				}
				}
				State = 47;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public Node_statementContext node_statement() {
			return GetRuleContext<Node_statementContext>(0);
		}
		public Edge_statementContext edge_statement() {
			return GetRuleContext<Edge_statementContext>(0);
		}
		public Attribute_statementContext attribute_statement() {
			return GetRuleContext<Attribute_statementContext>(0);
		}
		public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		public ITerminalNode ASSIGN() { return GetToken(DotParser.ASSIGN, 0); }
		public SubgraphContext subgraph() {
			return GetRuleContext<SubgraphContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 56;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48; node_statement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 49; edge_statement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 50; attribute_statement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 51; id();
				State = 52; Match(ASSIGN);
				State = 53; id();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 55; subgraph();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Attribute_statementContext : ParserRuleContext {
		public Attribute_listContext attribute_list() {
			return GetRuleContext<Attribute_listContext>(0);
		}
		public ITerminalNode GRAPH() { return GetToken(DotParser.GRAPH, 0); }
		public ITerminalNode NODE() { return GetToken(DotParser.NODE, 0); }
		public ITerminalNode EDGE() { return GetToken(DotParser.EDGE, 0); }
		public Attribute_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attribute_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterAttribute_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitAttribute_statement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAttribute_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Attribute_statementContext attribute_statement() {
		Attribute_statementContext _localctx = new Attribute_statementContext(Context, State);
		EnterRule(_localctx, 6, RULE_attribute_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GRAPH) | (1L << NODE) | (1L << EDGE))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 59; attribute_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Attribute_listContext : ParserRuleContext {
		public ITerminalNode[] LBRACK() { return GetTokens(DotParser.LBRACK); }
		public ITerminalNode LBRACK(int i) {
			return GetToken(DotParser.LBRACK, i);
		}
		public ITerminalNode[] RBRACK() { return GetTokens(DotParser.RBRACK); }
		public ITerminalNode RBRACK(int i) {
			return GetToken(DotParser.RBRACK, i);
		}
		public A_listContext[] a_list() {
			return GetRuleContexts<A_listContext>();
		}
		public A_listContext a_list(int i) {
			return GetRuleContext<A_listContext>(i);
		}
		public Attribute_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attribute_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterAttribute_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitAttribute_list(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAttribute_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Attribute_listContext attribute_list() {
		Attribute_listContext _localctx = new Attribute_listContext(Context, State);
		EnterRule(_localctx, 8, RULE_attribute_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 61; Match(LBRACK);
				State = 63;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << STRING) | (1L << ID) | (1L << HTML_STRING))) != 0)) {
					{
					State = 62; a_list();
					}
				}

				State = 65; Match(RBRACK);
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==LBRACK );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class A_listContext : ParserRuleContext {
		public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		public ITerminalNode[] ASSIGN() { return GetTokens(DotParser.ASSIGN); }
		public ITerminalNode ASSIGN(int i) {
			return GetToken(DotParser.ASSIGN, i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(DotParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(DotParser.COMMA, i);
		}
		public A_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_a_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterA_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitA_list(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitA_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public A_listContext a_list() {
		A_listContext _localctx = new A_listContext(Context, State);
		EnterRule(_localctx, 10, RULE_a_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 70; id();
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ASSIGN) {
					{
					State = 71; Match(ASSIGN);
					State = 72; id();
					}
				}

				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==COMMA) {
					{
					State = 75; Match(COMMA);
					}
				}

				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << STRING) | (1L << ID) | (1L << HTML_STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Edge_statementContext : ParserRuleContext {
		public EdgeRHSContext edgeRHS() {
			return GetRuleContext<EdgeRHSContext>(0);
		}
		public Node_idContext node_id() {
			return GetRuleContext<Node_idContext>(0);
		}
		public SubgraphContext subgraph() {
			return GetRuleContext<SubgraphContext>(0);
		}
		public Attribute_listContext attribute_list() {
			return GetRuleContext<Attribute_listContext>(0);
		}
		public Edge_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_edge_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterEdge_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitEdge_statement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEdge_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Edge_statementContext edge_statement() {
		Edge_statementContext _localctx = new Edge_statementContext(Context, State);
		EnterRule(_localctx, 12, RULE_edge_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBER:
			case STRING:
			case ID:
			case HTML_STRING:
				{
				State = 82; node_id();
				}
				break;
			case SUBGRAPH:
			case LBRACE:
				{
				State = 83; subgraph();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 86; edgeRHS();
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LBRACK) {
				{
				State = 87; attribute_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EdgeRHSContext : ParserRuleContext {
		public Edge_operationContext[] edge_operation() {
			return GetRuleContexts<Edge_operationContext>();
		}
		public Edge_operationContext edge_operation(int i) {
			return GetRuleContext<Edge_operationContext>(i);
		}
		public Node_idContext[] node_id() {
			return GetRuleContexts<Node_idContext>();
		}
		public Node_idContext node_id(int i) {
			return GetRuleContext<Node_idContext>(i);
		}
		public SubgraphContext[] subgraph() {
			return GetRuleContexts<SubgraphContext>();
		}
		public SubgraphContext subgraph(int i) {
			return GetRuleContext<SubgraphContext>(i);
		}
		public EdgeRHSContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_edgeRHS; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterEdgeRHS(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitEdgeRHS(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEdgeRHS(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EdgeRHSContext edgeRHS() {
		EdgeRHSContext _localctx = new EdgeRHSContext(Context, State);
		EnterRule(_localctx, 14, RULE_edgeRHS);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 90; edge_operation();
				State = 93;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case NUMBER:
				case STRING:
				case ID:
				case HTML_STRING:
					{
					State = 91; node_id();
					}
					break;
				case SUBGRAPH:
				case LBRACE:
					{
					State = 92; subgraph();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				State = 97;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ARROW || _la==OPTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Edge_operationContext : ParserRuleContext {
		public ITerminalNode ARROW() { return GetToken(DotParser.ARROW, 0); }
		public ITerminalNode OPTION() { return GetToken(DotParser.OPTION, 0); }
		public Edge_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_edge_operation; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterEdge_operation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitEdge_operation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEdge_operation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Edge_operationContext edge_operation() {
		Edge_operationContext _localctx = new Edge_operationContext(Context, State);
		EnterRule(_localctx, 16, RULE_edge_operation);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			_la = TokenStream.LA(1);
			if ( !(_la==ARROW || _la==OPTION) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Node_statementContext : ParserRuleContext {
		public Node_idContext node_id() {
			return GetRuleContext<Node_idContext>(0);
		}
		public Attribute_listContext attribute_list() {
			return GetRuleContext<Attribute_listContext>(0);
		}
		public Node_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_node_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterNode_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitNode_statement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNode_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Node_statementContext node_statement() {
		Node_statementContext _localctx = new Node_statementContext(Context, State);
		EnterRule(_localctx, 18, RULE_node_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101; node_id();
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LBRACK) {
				{
				State = 102; attribute_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Node_idContext : ParserRuleContext {
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public PortContext port() {
			return GetRuleContext<PortContext>(0);
		}
		public Node_idContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_node_id; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterNode_id(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitNode_id(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNode_id(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Node_idContext node_id() {
		Node_idContext _localctx = new Node_idContext(Context, State);
		EnterRule(_localctx, 20, RULE_node_id);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105; id();
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COLON) {
				{
				State = 106; port();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PortContext : ParserRuleContext {
		public ITerminalNode[] COLON() { return GetTokens(DotParser.COLON); }
		public ITerminalNode COLON(int i) {
			return GetToken(DotParser.COLON, i);
		}
		public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		public PortContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_port; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.EnterPort(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDotParserListener typedListener = listener as IDotParserListener;
			if (typedListener != null) typedListener.ExitPort(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDotParserVisitor<TResult> typedVisitor = visitor as IDotParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPort(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PortContext port() {
		PortContext _localctx = new PortContext(Context, State);
		EnterRule(_localctx, 22, RULE_port);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; Match(COLON);
			State = 110; id();
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COLON) {
				{
				State = 111; Match(COLON);
				State = 112; id();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
